Fix issue with screen jumping when modal is shown

--- a/client/src/styles/_inbox.scss
+++ b/client/src/styles/_inbox.scss
@@ -4,6 +4,7 @@ SECTION {
 
 BODY.modal-open {
     overflow: visible !important;
+    padding-right: 0 !important;
 }
 
 .flight-Navbar .showWelcomeButton {
